--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "pg": "^8.3.3",
+    "request": "^2.88.2",
+    "request-promise-native": "^1.0.9"
   },
   "devDependencies": {
     "got": "^11.3.0",
